--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 	<h1>Tic-Tac-Toe</h1>
 	<h2 id="message">Message</h2>
 
-	<section class="board">
-		<div class="sqr" id="sq0"></div>
-		<div class="sqr" id="sq1"></div>
-		<div class="sqr" id="sq2"></div>
-		<div class="sqr" id="sq3"></div>
-		<div class="sqr" id="sq4"></div>
-		<div class="sqr" id="sq5"></div>
-		<div class="sqr" id="sq6"></div>
-		<div class="sqr" id="sq7"></div>
-		<div class="sqr" id="sq8"></div>
-	</section>    
+	<section id="board" class="board">
+		<div class="sqr" id="0"></div>
+		<div class="sqr" id="1"></div>
+		<div class="sqr" id="2"></div>
+		<div class="sqr" id="3"></div>
+		<div class="sqr" id="4"></div>
+		<div class="sqr" id="5"></div>
+		<div class="sqr" id="6"></div>
+		<div class="sqr" id="7"></div>
+		<div class="sqr" id="8"></div>
+	</section>
+	<button id="reset">Reset</button>
 </body>
 </html>
