--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 	<script defer src="./js/app.js"></script>
 	<title>Tic Tac Toe</title>
 </head>
 <body>
-	<h1>Tic-Tac-Toe</h1>
-	<h2 id="message">Message</h2>
-
-	<section id="board" class="board">
-		<div class="sqr" id="0"></div>
-		<div class="sqr" id="1"></div>
-		<div class="sqr" id="2"></div>
-		<div class="sqr" id="3"></div>
-		<div class="sqr" id="4"></div>
-		<div class="sqr" id="5"></div>
-		<div class="sqr" id="6"></div>
-		<div class="sqr" id="7"></div>
-		<div class="sqr" id="8"></div>
-	</section>
-	<button id="reset">Reset</button>
+	<div class="container">
+		<h1 id="title">Tic-Tac-Toe</h1>
+		<h2 id="message">Message</h2>
+	
+		<section id="board" class="board">
+			<div class="sqr" id="sq0"></div>
+			<div class="sqr insideV" id="sq1"></div>
+			<div class="sqr" id="sq2"></div>
+			<div class="sqr insideH" id="sq3"></div>
+			<div class="sqr" id="sq4"></div>
+			<div class="sqr insideH" id="sq5"></div>
+			<div class="sqr" id="sq6"></div>
+			<div class="sqr insideV" id="sq7"></div>
+			<div class="sqr" id="sq8"></div>
+		</section>
+		<button id="reset">Reset</button>
+	</div>
 </body>
 </html>
