--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	<div class="container">
 		<h1 id="title">Tic-Tac-Toe</h1>
 		<h2 id="message">Message</h2>
-	
 		<section id="board" class="board">
 			<div class="sqr" id="sq0"></div>
 			<div class="sqr insideV" id="sq1"></div>
@@ -28,5 +27,7 @@
 		</section>
 		<button id="reset">Reset</button>
 	</div>
+	
+	<div id="d1"><img width="100px" src="assets/delorean.png"> </div>
 </body>
 </html>
