trying to get anims running for more than one delorean at a time. not functional yet.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<title>Tic Tac Toe</title>
 </head>
 <body>
+	<div class="running" id="anim">⏯️</div>
 	<div class="container">
 		<h1 id="title">Tic-Tac-Toe</h1>
 		<h2 id="message">Message</h2>
@@ -28,6 +29,12 @@
 		<button id="reset">Reset</button>
 	</div>
 	
-	<div id="d1"><img width="100px" src="assets/delorean.png"> </div>
+	<div>
+		<img class="delorean" id="d1" width="100px" src="assets/delorean.png"> 
+		<img class="delorean" id="d2" width="100px" src="assets/delorean.png"> 
+		<img class="delorean" id="d3" width="100px" src="assets/delorean.png"> 
+		<img class="delorean" id="d4" width="100px" src="assets/delorean.png"> 
+		<img class="delorean" id="d5" width="100px" src="assets/delorean.png"> 
+	</div>
 </body>
 </html>
