--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,600;0,900;1,100;1,300&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<script defer src="./js/app.js"></script>
 	<title>Tic Tac Toe</title>
 </head>
@@ -16,16 +17,34 @@
 	<div class="container">
 		<h1 id="title">Tic-Tac-Toe</h1>
 		<h2 id="message">Message</h2>
-		<section id="board" class="board">
-			<div class="sqr" id="sq0"></div>
-			<div class="sqr insideV" id="sq1"></div>
-			<div class="sqr" id="sq2"></div>
-			<div class="sqr insideH" id="sq3"></div>
-			<div class="sqr" id="sq4"></div>
-			<div class="sqr insideH" id="sq5"></div>
-			<div class="sqr" id="sq6"></div>
-			<div class="sqr insideV" id="sq7"></div>
-			<div class="sqr" id="sq8"></div>
+		<section id="board" class="board animate__animated">
+			<div class="sqrWrap">
+				<div class="sqr animate__animated" id="sq0"></div>
+			</div>
+			<div class="sqrWrap insideV">
+				<div class="sqr animate__animated" id="sq1"></div>
+			</div>
+			<div class="sqrWrap">
+				<div class="sqr animate__animated" id="sq2"></div>
+			</div>
+			<div class="sqrWrap insideH">
+				<div class="sqr animate__animated" id="sq3"></div>
+			</div>
+			<div class="sqrWrap" id="sqrW4">
+				<div class="sqr animate__animated" id="sq4"></div>
+			</div>
+			<div class="sqrWrap insideH">
+				<div class="sqr animate__animated" id="sq5"></div>
+			</div>
+			<div class="sqrWrap">
+				<div class="sqr animate__animated" id="sq6"></div>
+			</div>
+			<div class="sqrWrap insideV">
+				<div class="sqr animate__animated" id="sq7"></div>
+			</div>
+			<div class="sqrWrap">
+				<div class="sqr animate__animated" id="sq8"></div>
+			</div>
 		</section>
 		<button id="reset">Reset</button>
 	</div>
@@ -36,6 +55,8 @@
 		<img class="delorean" id="d3" width="100px" src="assets/delorean.png"> 
 		<img class="delorean" id="d4" width="100px" src="assets/delorean.png"> 
 		<img class="delorean" id="d5" width="100px" src="assets/delorean.png"> 
+		<img class="delorean" id="d6" width="100px" src="assets/delorean.png"> 
+		<img class="delorean" id="d7" width="100px" src="assets/delorean.png"> 
 	</div>
 </body>
 </html>
