added fade in/out on pausing anims, and more formatting

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 	
 	<!-- Here there be cars. -->
 	<div>
-		<img class="delorean" id="d1" width="100px" src="assets/delorean.png"> 
-		<img class="delorean" id="d2" width="100px" src="assets/delorean.png"> 
-		<img class="delorean" id="d3" width="100px" src="assets/delorean.png"> 
-		<img class="delorean" id="d4" width="100px" src="assets/delorean.png"> 
-		<img class="delorean" id="d5" width="100px" src="assets/delorean.png"> 
-		<img class="delorean" id="d6" width="100px" src="assets/delorean.png"> 
-		<img class="delorean" id="d7" width="100px" src="assets/delorean.png"> 
+		<img class="delorean animate__animated" id="d1" width="100px" src="assets/delorean.png"> 
+		<img class="delorean animate__animated" id="d2" width="100px" src="assets/delorean.png"> 
+		<img class="delorean animate__animated" id="d3" width="100px" src="assets/delorean.png"> 
+		<img class="delorean animate__animated" id="d4" width="100px" src="assets/delorean.png"> 
+		<img class="delorean animate__animated" id="d5" width="100px" src="assets/delorean.png"> 
+		<img class="delorean animate__animated" id="d6" width="100px" src="assets/delorean.png"> 
+		<img class="delorean animate__animated" id="d7" width="100px" src="assets/delorean.png"> 
 	</div>
 </body>
 </html>
